TEST_PROGRAMS/VALID/shortvardecl.go
package main

func main(){
    var (
    x,x1 int;
    y,y4 = 43,45
    z,z8 int = 5,7
    )

}
