TEST_PROGRAMS/INVALID/04/92.go
package main

func main() {
    var x, y = 3
}
